--- a/src/Components/Common/IconComponent/IconComponent.module.css
+++ b/src/Components/Common/IconComponent/IconComponent.module.css
@@ -14,7 +14,4 @@
     left: 9%;
     width: 100%;
     height: 100%;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
 }
